added hover info to about me

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <div>
             <b>cvni81</b>
             <ul style="margin-top: 0px">
-                <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona">tok</a></li>
+                <li><b>i speak:</b> <span style="text-decoration: underline dotted;" title="brazillian portuguese (native)">pt-br</span>, <span style="text-decoration: underline dotted;" title="english (eh it's good)">en</span>, <a href="https://en.wikipedia.org/wiki/Toki_Pona" title="toki pona (advanced)">tok</a></li>
                 <li><b>pronouns:</b> they/them</li>
                 <li><b>age:</b> under 18</li>
                 <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians">music</a>, composing stuffs in beepbox, <a href="/website/doodles">doodling things</a> and very rarely <a href="/website/words">writing</a>.</li>
