is it fixed now??

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -32,9 +32,9 @@
         <a href="/website/">go back</a>
         <div style="width: auto; background: var(--text); height: 1px; margin-top: 16px"></div></div>
     <div class="cmain">
-        This is the place where we put buttons to other folks' sites, some friends of mine and others ones i found
+        <p>This is the place where we put buttons to other folks' sites, some friends of mine and others ones i found
         on status.cafe!<br>
-        A button of my own is on the works if you wanna add it to your own webplace!
+        A button of my own is on the works if you wanna add it to your own webplace!</p>
 
         <h2>acquaintances</h2>
         <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> 
