did a buncha stuff

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         what i like and what i do! Or... at least i try to. This place is
         basically in an eternal state of 'UNDER CONSTRUCTION'. But hey it happens.
         If you wanna check some stuff out, cool! If you don't, that's cool too!
-        ...sorry i don't have much to say, it isn't really my thing to say much.</p><br><br>
+        ...sorry i don't have much to say, it isn't really my thing to say much.</p><br>
         <details><summary>contacts</summary>
             <ul>
                 <li><b>discord: </b>cvni81#4837</li>
