readded blender and icossymetry

--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
     <body>
         <div class="this-container">
         <div>
-            <img src="images/walking.gif" alt="walking cube">
+            <img src="/website/images/walking.gif" alt="a walking cube">
         </div>
         <div style="width: 2px; height: 68px; background-color: #f0f0f0"></div>
         <div style="margin-top: -2px">
