--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <title>about me</title><style>
         body{--back: #fcfcfc;
         --text: #1b1b1b;
-        --color: #1b1b1b;
+        --color: #2b5cb1;
         --shadow: #c6c6c6;}
         img{margin: 20px auto}
         @media only screen and (min-width: 500px) {
@@ -24,14 +24,14 @@
     <div class="main">
         
         <div class="about">
-            <div style="display: flex"><img src="images/dingus.png" alt="dingus" style="align-self: center; border-radius: 100%"></div>
+            <div style="display: flex"><img src="images/dingus.png" alt="a simplistic drawing of me and my dingus hair" style="align-self: center; border-radius: 100%"></div>
             <div>
             <b>cvni81</b>
             <ul style="margin-top: 0px">
                 <li><b>i speak:</b> <span style="text-decoration: underline dotted;" title="brazillian portuguese (native)">pt-br</span>, <span style="text-decoration: underline dotted;" title="english (eh it's good)">en</span>, <a href="https://en.wikipedia.org/wiki/Toki_Pona" title="toki pona (advanced)">tok</a></li>
                 <li><b>pronouns:</b> they/them</li>
                 <li><b>age:</b> under 18</li>
-                <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians">music</a>, composing stuffs in beepbox, <a href="/website/doodles">doodling things</a> and very rarely <a href="/website/words">writing</a>.</li>
+                <li><b>i like:</b> chatting in Discord, listening to <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92">music</a>, composing stuffs in beepbox, <a href="/website/doodles">doodling things</a> and very rarely <a href="/website/words">writing</a>.</li>
             </ul></div>
             </div>
         <p style="margin: 0">I'm not that used to talking this much about myself but i'm gonna try.<br>
@@ -41,7 +41,7 @@
         a bunch of other things i'm forgetting.<br>
         Oh, and coding! (i'm doing it right now) I do a bunch of stuffs in python and pygame, maybe i'll put them here someday.<br>
         My gender is weird so... non-binary<br>That's pretty much it.</p>
-        <img src="images/dingusattempts.png" alt="dingus attempts" style="margin: 0; max-width: 100%">
+        <img src="images/dingusattempts.png" alt="the times i attempted to draw the above drawing" style="margin: 0; max-width: 100%">
 
     </div></body>
 </html>
