--- a/buttons/index.html
+++ b/buttons/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@1,700&display=swap&text=abcehilnopqrstu" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="/website/images/buttonicon.jpg">
+        <link rel="icon" type="image/x-icon" href="buttonicon.jpg">
         <title>buttons</title><style>
             body {--back: #b8cadf;
             --text: #001a40;
