--- a/sitelog.html
+++ b/sitelog.html
@@ -35,6 +35,10 @@
             And old web aesthetic (?) with cool fonts. Idk if i succeeded h</details>
         <br>
         <div id="entry">
+            <h2>29/6/2023 12:23<div class="after"></div></h2>
+            <p>Readded the blender page with the icossymetry images!</p> 
+        </div><div id="entry">
+        <div id="entry">
             <h2>28/6/2023 21:44<div class="after"></div></h2>
             <p>Added about, button and 404 pages.</p> 
         </div><div id="entry">
