--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             a.about:hover{background-color: #1b1b1b; color: #fcfcfc}
             .about:hover::after{content: "(me and what i like to do)"}
 
+            a.blender:hover{background-color: #090909; color: #f9f9f9}
+            .blender:hover::after{content: "(3d renders made in blender)"}
+
             a.buttons:hover{background-color: #0b458e; color: #b8cadf}
             .buttons:hover::after{content: "(other folks' sites)"}
 
@@ -75,6 +78,7 @@
     </div>
     <ul class="summary">
         <li><a href="about"     class="about"  >about</a></li>
+        <li><a href="blender"   class="blender">blender</a></li>
         <li><a href="buttons"   class="buttons">buttons</a></li>
         <li><a href="sitelog"   class="log"    >sitelog</a></li>
     </ul>
