added the blender cube favicon

--- a/blender/index.html
+++ b/blender/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="images/logicon.jpg">
+        <link rel="icon" type="image/x-icon" href="cube.gif">
         <title>blender</title><style>
             body {--back: #090909;
             --text: #f9f9f9;
