--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         basically in an eternal state of 'UNDER CONSTRUCTION'. But hey it happens.
         If you wanna check some stuff out, cool! If you don't, that's cool too!
         ...sorry i don't have much to say, it isn't really my thing to say much.</p><br>
-        <details><summary>places i am</summary>
+        <details><summary>places i am on</summary>
             <ul>
                 <li><b>discord: </b>cvni81#4837</li>
                 <li><b>music i like: </b><a href="https://bandcamp.com/cvni1981">bandcamp</a>, <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92">spotify</a></li>
