--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -5,8 +5,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="images/logicon.jpg">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="/website/cube.gif">
         <title>blender/icossymetry</title><style>
             body {--back: #090909;
             --text: #f9f9f9;
