--- a/buttons/index.html
+++ b/buttons/index.html
@@ -4,9 +4,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@1,700&display=swap&text=abcehilnopqrstu" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@1,700&display=swap&text=abcehilmnopqrstuy" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="buttonicon.jpg">
         <title>buttons</title><style>
             body {--back: #b8cadf;
@@ -14,10 +14,12 @@
             --color: #0b458e;
             --shadow: #6690de;
             font-family: 'Lora', serif}
-            h1, h2{font-family: 'IBM Plex Serif', serif; margin-bottom: 8px}
+            h1, h2, summary{font-family: 'IBM Plex Serif', serif; margin-bottom: 8px}
             h1{font-size: min(10vw, 3rem)}
             h2::before{content:"- "; color: var(--color);}
             .button:hover img{animation: rise .25s cubic-bezier(.08,.82,.17,1) forwards}
+            textarea{border: solid #001a43 1px; border-radius: 5px;
+            background-color: #faf9ff; color: #001a43}
 
             @keyframes rise {
             from {box-shadow: var(--back) 0 0; }
@@ -33,8 +35,14 @@
         <div style="width: auto; background: var(--text); height: 1px; margin-top: 16px"></div></div>
     <div class="cmain">
         <p>This is the place where we put buttons to other folks' sites, some friends of mine and others ones i found
-        on status.cafe!<br>
-        A button of my own is on the works if you wanna add it to your own webplace!</p>
+        on status.cafe!<br>And here's my button(s) if you want to add either of them to your site.</p>
+        <details><summary>my buttons</summary>
+            <div style="display: grid; grid-template-columns: 50% 50%; padding:8px; gap: 8px">
+            <div><img src="88x31.gif"></div>
+            <div><img src="200x40.gif"></div>
+            <div><textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/88x31.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
+            <div><textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/200x40.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
+        </div></details>
 
         <h2>acquaintances</h2>
         <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> 
