--- a/buttons/index.html
+++ b/buttons/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@1,700&display=swap&text=abcehilmnopqrstuy" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="buttonicon.jpg">
         <title>buttons</title><style>
             body {--back: #b8cadf;
@@ -18,7 +18,7 @@
             h1{font-size: min(10vw, 3rem)}
             h2::before{content:"- "; color: var(--color);}
             .button:hover img{animation: rise .25s cubic-bezier(.08,.82,.17,1) forwards}
-            textarea{border: solid #001a43 1px; border-radius: 5px;
+            textarea{border: solid #001a43 1px; border-radius: 7px;
             background-color: #faf9ff; color: #001a43}
 
             @keyframes rise {
@@ -38,10 +38,10 @@
         on status.cafe!<br>And here's my button(s) if you want to add either of them to your site.</p>
         <details><summary>my buttons</summary>
             <div style="display: grid; grid-template-columns: 50% 50%; padding:8px; gap: 8px">
-            <div><img src="88x31.gif"></div>
-            <div><img src="200x40.gif"></div>
-            <div><textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/88x31.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
-            <div><textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/200x40.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
+            <div><img src="88x31.gif"><br>
+            <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/88x31.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
+            <div><img src="200x40.gif"><br>
+            <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/200x40.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
         </div></details>
 
         <h2>acquaintances</h2>
