--- a/buttons/index.html
+++ b/buttons/index.html
@@ -18,6 +18,8 @@
             h1{font-size: min(10vw, 3rem)}
             h2::before{content:"- "; color: var(--color);}
             .button:hover img{animation: rise .25s cubic-bezier(.08,.82,.17,1) forwards}
+
+            .mybuttons{display: grid; grid-template-columns: 50% 50%; padding:8px; gap: 8px}
             textarea{border: solid #001a43 1px; border-radius: 7px;
             background-color: #faf9ff; color: #001a43}
 
@@ -27,6 +29,8 @@
             }
             
             .button:hover{background-color: var(--back)}
+            @media only screen and (max-width: 480px) {
+            .mybuttons{grid-template-columns: auto}}
         </style></head>
 
     <body><div class="ctitle">
@@ -37,7 +41,7 @@
         <p>This is the place where we put buttons to other folks' sites, some friends of mine and others ones i found
         on status.cafe!<br>And here's my button(s) if you want to add either of them to your site.</p>
         <details><summary>my buttons</summary>
-            <div style="display: grid; grid-template-columns: 50% 50%; padding:8px; gap: 8px">
+            <div class="mybuttons">
             <div><img src="88x31.gif"><br>
             <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/88x31.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
             <div><img src="200x40.gif"><br>
