--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             a.blender:hover{background-color: #090909; color: #f9f9f9}
             .blender:hover::after{content: "(3d renders made in blender)"}
 
+            a.words:hover{background-color: #934b00; color: #ffdcc4}
+            .words:hover::after{content: "(stuff i've written)"}
+
             a.buttons:hover{background-color: #0b458e; color: #b8cadf}
             .buttons:hover::after{content: "(other folks' sites)"}
 
@@ -79,6 +82,7 @@
     <ul class="summary">
         <li><a href="about"     class="about"  >about</a></li>
         <li><a href="blender"   class="blender">blender</a></li>
+        <li><a href="words"     class="words"  >words</a></li>
         <li><a href="buttons"   class="buttons">buttons</a></li>
         <li><a href="sitelog"   class="log"    >sitelog</a></li>
     </ul>
