--- a/words/ona.html
+++ b/words/ona.html
@@ -7,30 +7,32 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="wordsicon.jpg">
-        <title>words</title><style>
+        <title>ona</title><style>
             body {--back: #ffdcc4;
             --text: #301400;
             --color: #934b00;
             --shadow: #ffb781;
             font-family: 'Andika', serif;
             font-size: 1.2rem}
-            h1{font-size: min(10vw, 3rem); margin-top: -2px 0}
-            h2::before{content:"- "; color: var(--color);}
+            h1{font-size: min(10vw, 3rem); margin: -12px 0}
         </style></head>
 
-    <body><div class="title">
-        <h1>words</h1>
-        <a href="/website/">go back</a>
+    <body><div class="ctitle">
+        <h1>tomo ni</h1>
+        <a href="/website/words/">o tawa lipu pini</a>
         <div style="width: auto; background: var(--color); height: 1px; margin-top: 16px"></div></div>
-    <div class="main">
-        <p>These are most of the things that i've written and feel are good enough to put here.
-        Most of them are in <a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a>, a language with 
-        about 120 words, so writing and reading it back is an interesting experience.
-    </p>
-    <h2><a href="diary">diary</a> (690 words)</h2>
-    <h2><a href="ona">ona</a> (nimi 42)</h2>
-    <h2><a href="sona-pini">sona pini</a> (nimi 124)</h2>
-    <h2><a href="tomo-ni">tomo ni</a> (nimi 115)</h2>
-    <h2><a href="len-pi-laso-telo">len pi laso telo</a> (nimi 647)</h2>
+    <div class="cmain"><p>
+        ona li lon ala.
+        <br>mi pali e ona.
+        <br>tan la mi sona ala.
+        <br>ken la musi.
+        <br>ona li tawa.
+        <br>mi weka e ona.
+        <br>mi wan taso.
+        <br>mi seme.
+        <br>mi sona ala e mi.
+        <br>mi pilin ala.
+        <br>pilin la mi majuna.
+        <br>mi pakala. </p>
     </div></body>
 </html>
