--- a/sitelog.html
+++ b/sitelog.html
@@ -35,6 +35,9 @@
             And old web aesthetic (?) with cool fonts. Idk if i succeeded h</details>
         <br>
         <div id="entry">
+            <h2>4/7/2023 10:16<div class="after"></div></h2>
+            <p>Added some texts back on words!</p> 
+        </div><div id="entry">
             <h2>30/6/2023 22:07<div class="after"></div></h2>
             <p>Added my button(s) to the button page.</p> 
         </div><div id="entry">
