--- a/words/len-pi-laso-telo.html
+++ b/words/len-pi-laso-telo.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Andika:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="wordsicon.jpg">
         <title>len pi laso telo</title><style>
             body {--back: #ffdcc4;
@@ -14,12 +14,12 @@
             --shadow: #ffb781;
             font-family: 'Andika', serif;
             font-size: 1.2rem}
-            h1{font-size: min(10vw, 3rem); margin-top: -12px}
+            h1{font-size: min(10vw, 3rem); margin-top: -12px 0}
         </style></head>
 
     <body><div class="ctitle">
         <h1>len pi laso telo</h1>
-        <a href="">o tawa lipu pini</a>
+        <a href="/website/words/">o tawa lipu pini</a>
         <div style="width: auto; background: var(--color); height: 1px; margin-top: 16px"></div></div>
     <div class="cmain"><p>
         toki a.
