fixed some words margins

--- a/words/index.html
+++ b/words/index.html
@@ -14,8 +14,9 @@
             --shadow: #ffb781;
             font-family: 'Andika', serif;
             font-size: 1.2rem}
-            h1{font-size: min(10vw, 3rem); margin-top: -2px 0}
-            h2::before{content:"- "; color: var(--color);}
+            h1{font-size: min(10vw, 3rem); margin: -12px 0}
+            h2{margin-top: 8px}
+            h2::before{content:"- "}
         </style></head>
 
     <body><div class="title">
