--- a/words/len-pi-laso-telo.html
+++ b/words/len-pi-laso-telo.html
@@ -14,7 +14,7 @@
             --shadow: #ffb781;
             font-family: 'Andika', serif;
             font-size: 1.2rem}
-            h1{font-size: min(10vw, 3rem); margin-top: -12px 0}
+            h1{font-size: min(10vw, 3rem); margin: -12px 0}
         </style></head>
 
     <body><div class="ctitle">
