--- a/mante.html
+++ b/mante.html
@@ -119,7 +119,7 @@
             <li><b>The Planet Mercury:</b> 22 changes</li>
             <li><b>kala Asi/jan Seli:</b> 4 changes</li>
         </ul>
-        tan jan laso pi mute ante
+        tan jan loje pi mute ante
         </p>
     </div></body>
 </html>
