--- a/mante.html
+++ b/mante.html
@@ -118,7 +118,9 @@
             <li><b>motan:</b> 27 changes</li>
             <li><b>The Planet Mercury:</b> 22 changes</li>
             <li><b>kala Asi/jan Seli:</b> 4 changes</li>
-        </ul>
+        </ul><br>
+        Graph of changes per day:<br><br>
+        <img src="images/chart.png" style="max-width: 100%;"><br><br>
         tan jan loje pi mute ante
         </p>
     </div></body>
