--- a/mante.html
+++ b/mante.html
@@ -109,6 +109,7 @@
             <li>july 13:<b> ma ante pi toki ante </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 14:<b> ma ante pi ma ante </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 14:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li></ul>
+            <li>july 14:<b> ma mew mew pi ijo kissie cutie </b><span class="name">The Planet Mercury</span></li><br>
         <h2 style="font-size:2rem">notes</h2>
         <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
         Also this is accurate to july 14th only.<br>
@@ -117,11 +118,9 @@
         <ul>
             <li><b>kulupu ko:</b> 33 changes</li>
             <li><b>motan:</b> 27 changes</li>
-            <li><b>The Planet Mercury:</b> 22 changes</li>
+            <li><b>The Planet Mercury:</b> 23 changes</li>
             <li><b>kala Asi/jan Seli:</b> 4 changes</li>
-        </ul><br>
-        Graph of changes per day:<br><br>
-        <img src="images/chart.png" style="max-width: 100%;"><br><br>
+        </ul><br><br>
         tan jan loje pi mute ante
         </p>
     </div></body>
