--- a/mante.html
+++ b/mante.html
@@ -108,10 +108,10 @@
             <li>july 13:<b> mu temi </b><span class="name">kulupu ko</span></li><br>
             <li>july 13:<b> ma ante pi toki ante </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 14:<b> ma ante pi ma ante </b><span class="name">The Planet Mercury</span></li><br>
-            <li>july 14:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li></ul>
+            <li>july 14:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
             <li>july 14:<b> ma mew mew pi ijo kissie cutie </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 16:<b> tumblr </b><span class="name">kulupu ko</span></li></ul>
-        <h2 style="font-size:2rem">notes</h2>
+        </ul><h2 style="font-size:2rem">notes</h2>
         <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
         Also this is accurate to july 14th only.<br>
         I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
