--- a/mante.html
+++ b/mante.html
@@ -110,7 +110,9 @@
             <li>july 14:<b> ma ante pi ma ante </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 14:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
             <li>july 14:<b> ma mew mew pi ijo kissie cutie </b><span class="name">The Planet Mercury</span></li><br>
-            <li>july 16:<b> tumblr </b><span class="name">kulupu ko</span></li></ul>
+            <li>july 16:<b> tumblr </b><span class="name">kulupu ko</span></li>
+            <li>july 17:<b> tumbr </b><span class="name">motan</span></li>
+            <li>july 17:<b> timber ! </b><span class="name">The Planet Mercury</span></li>
         </ul><h2 style="font-size:2rem">notes</h2>
         <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
         Also this is accurate to july 14th only.<br>
@@ -118,8 +120,8 @@
         (name changer) leaderboard:
         <ul>
             <li><b>kulupu ko:</b> 34 changes</li>
-            <li><b>motan:</b> 27 changes</li>
-            <li><b>The Planet Mercury:</b> 23 changes</li>
+            <li><b>motan:</b> 28 changes</li>
+            <li><b>The Planet Mercury:</b> 24 changes</li>
             <li><b>kala Asi/jan Seli:</b> 4 changes</li>
         </ul><br><br>
         tan jan loje pi mute ante
