--- a/mante.html
+++ b/mante.html
@@ -110,21 +110,23 @@
             <li>july 14:<b> ma ante pi ma ante </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 14:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
             <li>july 14:<b> ma mew mew pi ijo kissie cutie </b><span class="name">The Planet Mercury</span></li><br>
-            <li>july 16:<b> tumblr </b><span class="name">kulupu ko</span></li>
-            <li>july 17:<b> tumbr </b><span class="name">motan</span></li>
-            <li>july 17:<b> timber ! </b><span class="name">The Planet Mercury</span></li>
+            <li>july 16:<b> tumblr </b><span class="name">kulupu ko</span></li><br>
+            <li>july 17:<b> tumbr </b><span class="name">motan</span></li><br>
+            <li>july 17:<b> timber ! </b><span class="name">The Planet Mercury</span></li><br>
+            <li>july 17:<b> <span title="oh come on">hah look im the server name list</span> </b><span class="name">kala Asi</span></li><br>
         </ul><h2 style="font-size:2rem">notes</h2>
         <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
-        Also this is accurate to july 14th only.<br>
+        Also this is accurate to [as long as i can keep updating this]<br>
         I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
         (name changer) leaderboard:
         <ul>
             <li><b>kulupu ko:</b> 34 changes</li>
             <li><b>motan:</b> 28 changes</li>
             <li><b>The Planet Mercury:</b> 24 changes</li>
-            <li><b>kala Asi/jan Seli:</b> 4 changes</li>
+            <li><b>kala Asi:</b> 5 changes</li>
+            <li><b>jan Seli:</b> 4 changes</li>
         </ul><br><br>
-        tan jan loje pi mute ante
+        tan mute ante
         </p>
     </div></body>
 </html>
