--- a/mante.html
+++ b/mante.html
@@ -113,7 +113,7 @@
             <li>july 16:<b> tumblr </b><span class="name">kulupu ko</span></li><br>
             <li>july 17:<b> tumbr </b><span class="name">motan</span></li><br>
             <li>july 17:<b> timber ! </b><span class="name">The Planet Mercury</span></li><br>
-            <li>july 17:<b> <span title="oh come on">hah look im the server name list</span> </b><span class="name">kala Asi</span></li><br>
+            <li>july 17:<b> <span style="cursor:help" title="oh come on">hah look im the server name list</span> </b><span class="name">kala Asi</span></li><br>
         </ul><h2 style="font-size:2rem">notes</h2>
         <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
         Also this is accurate to [as long as i can keep updating this]<br>
