--- a/mante.html
+++ b/mante.html
@@ -114,16 +114,22 @@
             <li>july 17:<b> tumbr </b><span class="name">motan</span></li><br>
             <li>july 17:<b> timber ! </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 17:<b> <span style="cursor:help" title="oh come on">hah look im the server name list</span> </b><span class="name">kala Asi</span></li><br>
+            <li>july 17:<b> ma aspen pi ijo aspen </b><span class="name">kulupu ko</span></li><br>
+            <li>july 18:<b> ma ala </b><span class="name">The Planet Mercury</span></li><br>
+            <li>july 18:<b> mu ala </b><span class="name">kala Asi</span></li><br>
+            <li>july 19:<b> ma pi toki pona taso </b><span class="name">The Planet Mercury</span></li><br>
+            <li>july 19:<b> Jupiter (To get more stupider.) </b><span class="name">kulupu ko</span></li><br>
+            <li>july 20:<b> ma sona (tawa kama sona) </b><span class="name">The Planet Mercury</span></li><br>
         </ul><h2 style="font-size:2rem">notes</h2>
         <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
         Also this is accurate to [as long as i can keep updating this]<br>
         I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
         (name changer) leaderboard:
         <ul>
-            <li><b>kulupu ko:</b> 34 changes</li>
+            <li><b>kulupu ko:</b> 36 changes</li>
             <li><b>motan:</b> 28 changes</li>
-            <li><b>The Planet Mercury:</b> 24 changes</li>
-            <li><b>kala Asi:</b> 5 changes</li>
+            <li><b>The Planet Mercury:</b> 27 changes</li>
+            <li><b>kala Asi:</b> 6 changes</li>
             <li><b>jan Seli:</b> 4 changes</li>
         </ul><br><br>
         tan mute ante
