--- a/mante.html
+++ b/mante.html
@@ -16,10 +16,11 @@
         </style></head>
     <body><div class="title">
         <h1>every ma ante server name*</h1>
+        <a href="#">back to top</a>
         <div style="width: auto; background: var(--text); height: 1px; margin-top: 16px"></div></div>
     <div class="main">
         <details><summary><b>notes</b></summary>
-            <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
+            <br><p>These are only the names present in the audit log; there might be other names before june 4th.<br>
                 Also this is accurate to [as long as i can keep updating this]<br>
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
@@ -33,7 +34,8 @@
                 tan mute ante
         </details>
         <ul>
-            <li>july 20:<b> ma sona (tawa kama sona) </b><span class="name">The Planet Mercury</span></li><br>, july 19:<b> Jupiter (To get more stupider.) </b><span class="name">kulupu ko</span></li><br>
+            <li>july 20:<b> ma sona (tawa kama sona) </b><span class="name">The Planet Mercury</span></li><br>
+            <li>july 19:<b> Jupiter (To get more stupider.) </b><span class="name">kulupu ko</span></li><br>
             <li>july 19:<b> ma pi toki pona taso </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 18:<b> mu ala </b><span class="name">kala Asi</span></li><br>
             <li>july 18:<b> ma ala </b><span class="name">The Planet Mercury</span></li><br>
