--- a/mante.html
+++ b/mante.html
@@ -25,7 +25,7 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 36 changes</li>
+                    <li><b>kulupu ko:</b> 37 changes</li>
                     <li><b>motan:</b> 28 changes</li>
                     <li><b>The Planet Mercury:</b> 27 changes</li>
                     <li><b>kala Asi:</b> 6 changes</li>
@@ -34,6 +34,7 @@
                 tan mute ante
         </details>
         <ul>
+            <li>july 22:<b> aspen has a new computer and you should give it free games on steam </b><span class="name">kulupu ko</span></li><br>
             <li>july 20:<b> ma sona (tawa kama sona) </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 19:<b> Jupiter (To get more stupider.) </b><span class="name">kulupu ko</span></li><br>
             <li>july 19:<b> ma pi toki pona taso </b><span class="name">The Planet Mercury</span></li><br>
