--- a/mante.html
+++ b/mante.html
@@ -39,7 +39,7 @@
             <li>july 24:<b> Mekuwi fan club </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 23:<b> Tapi fan club </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 23:<b> Mekuwi fan club </b><span class="name">The Planet Mercury</span></li><br>
-            <li>july 23:<b> <span style="cursor:help" title="al or vertical space in typography. When rendered, a whitespace character does not correspond to a v"></span>In computer programming, whitespace is any character or series of characters that represent horizont </b><span class="name">kulupu ko</span></li><br>
+            <li>july 23:<b> <span style="cursor:help" title="al or vertical space in typography. When rendered, a whitespace character does not correspond to a v">In computer programming, whitespace is any character or series of characters that represent horizont</span> </b><span class="name">kulupu ko</span></li><br>
             <li>july 23:<b> aawdawwf </b><span class="name">kulupu ko</span></li><br>
             <li>july 23:<b> Mekuwi fan club </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 22:<b> oceania </b><span class="name">kulupu ko</span></li><br>
