--- a/mante.html
+++ b/mante.html
@@ -123,7 +123,7 @@
             <li>july 10:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
             <li>july 10:<b> "aspen's" ""fun"" "land" </b><span class="name">kulupu ko</span></li><br>
             <li>july 10:<b> aspen's "fun" land </b><span class="name">kulupu ko</span></li><br>
-            <li>july 9:<b> MA ANTIQVA </b><span class="name">the motan</span></li><br>
+            <li>july 9:<b> <span style="cursor:help" title="𐌌𐌀 𐌀𐌍𐌕𐌉𐌒𐌖𐌀 ">MA ANTIQVA</span> </b><span class="name">the motan</span></li><br>
             <li>july 9:<b> ma antiqua </b><span class="name">kala Asi</span></li><br>
             <li>july 8:<b> ma name change pi ijo name change </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 5:<b> tomo sama li ala sama </b><span class="name">jan Seli</span></li><br>
