--- a/mante.html
+++ b/mante.html
@@ -26,14 +26,18 @@
                 (name changer) leaderboard:
                 <ul>
                     <li><b>kulupu ko:</b> 40 changes</li>
-                    <li><b>The Planet Mercury:</b> 31 changes</li>
-                    <li><b>the motan:</b> 29 changes</li>
+                    <li><b>The Planet Mercury:</b> 34 changes</li>
+                    <li><b>the motan:</b> 30 changes</li>
                     <li><b>kala Asi:</b> 6 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
                 </ul><br>
                 tan mute ante
         </details>
         <ul>
+            <li>july 24:<b> Everybody fan club </b><span class="name">The Planet Mercury</span></li><br>
+            <li>july 24:<b> Everybody except Mekuwi fan club </b><span class="name">The Planet Mercury</span></li><br>
+            <li>july 24:<b> Everybody fan club </b><span class="name">The Planet Mercury</span></li><br>
+            <li>july 24:<b> <span style="cursor:help" title="https://en.wikipedia.org/wiki/John_Tokipona">John Tokipona</span> </b><span class="name">the motan</span></li><br>
             <li>july 24:<b> Mekuwi fan club </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 24:<b> Mekuwi </b><span class="name">the motan</span></li><br>
             <li>july 24:<b> Mekuwi fan club </b><span class="name">The Planet Mercury</span></li><br>
