--- a/mante.html
+++ b/mante.html
@@ -13,6 +13,7 @@
         --color: #808080;
         --shadow: #404040;}
         .name{color: var(--color)}
+        .tab:hover{background-color: #14052b; color: #23f3ad}
         </style></head>
     <body><div class="title">
         <h1>every ma ante server name*</h1>
@@ -25,15 +26,22 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 40 changes</li>
-                    <li><b>The Planet Mercury:</b> 34 changes</li>
-                    <li><b>the motan:</b> 30 changes</li>
+                    <li><b>kulupu ko:</b> 40 changes</li>...
+                    <li><b>The Planet Mercury:</b> 34 changes</li>.
+                    <li><b>the motan:</b> 30 changes</li>...
                     <li><b>kala Asi:</b> 6 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
                 </ul><br>
                 tan mute ante
         </details>
         <ul>
+            <li>july 25:<b> Home Of The <span class="tab">Tabby®</span> </b><span class="name">motan</span></li><br>
+            <li>july 25:<b> Server Name </b><span class="name">motan</span></li><br>
+            <li>july 24:<b> kulupu ko®'s mediocre wormly palace™ </b><span class="name">kulupu ko</span></li><br>
+            <li>july 24:<b> kulupu ko®'s excellent wormly palace™ </b><span class="name">The Planet Mercury</span></li><br>
+            <li>july 24:<b> kulupu ko®'s terrible wormly palace™ </b><span class="name">kulupu ko</span></li><br>
+            <li>july 24:<b> dr pepper </b><span class="name">kulupu ko</span></li><br>
+            <li>july 24:<b> diet coke </b><span class="name">motan</span></li><br>
             <li>july 24:<b> Everybody fan club </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 24:<b> Everybody except Mekuwi fan club </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 24:<b> Everybody fan club </b><span class="name">The Planet Mercury</span></li><br>
