--- a/mante.html
+++ b/mante.html
@@ -26,9 +26,9 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 40 changes</li>...
-                    <li><b>The Planet Mercury:</b> 34 changes</li>.
-                    <li><b>the motan:</b> 30 changes</li>...
+                    <li><b>kulupu ko:</b> 43 changes</li>
+                    <li><b>The Planet Mercury:</b> 35 changes</li>
+                    <li><b>the motan:</b> 33 changes</li>
                     <li><b>kala Asi:</b> 6 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
                 </ul><br>
