--- a/mante.html
+++ b/mante.html
@@ -29,12 +29,13 @@
                     <li><b>kulupu ko:</b> 43 changes</li>
                     <li><b>The Planet Mercury:</b> 35 changes</li>
                     <li><b>the motan:</b> 33 changes</li>
-                    <li><b>kala Asi:</b> 6 changes</li>
+                    <li><b>kala Asi:</b> 7 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
                 </ul><br>
-                tan mute ante
+                tan mute ante<br>
         </details>
         <ul>
+            <li>july 26:<b> 🐈🐱 </b><span class="name">kala Asi</span></li><br>
             <li>july 25:<b> Home Of The <span class="tab">Tabby®</span> </b><span class="name">motan</span></li><br>
             <li>july 25:<b> Server Name </b><span class="name">motan</span></li><br>
             <li>july 24:<b> kulupu ko®'s mediocre wormly palace™ </b><span class="name">kulupu ko</span></li><br>
