added bookmarks page!

--- a/sitelog.html
+++ b/sitelog.html
@@ -35,6 +35,11 @@
             And old web aesthetic (?) with cool fonts. Idk if i succeeded h</details>
         <br>
         <div id="entry">
+            <h2>28/7/2023 10:16<div class="after"></div></h2>
+            <p>Added a <a href="bookmarks">bookmarks page</a> (replacing websites) with raindrop collections instead of manually adding links.
+                Mostly added for the <a href="https://raindrop.io/cvni1981/anti-racism-resources-35349568">anti-racism resources collection</a> (please check it out!)
+            </p> 
+        </div><div id="entry">
             <h2>4/7/2023 10:16<div class="after"></div></h2>
             <p>Added some texts back on words!</p> 
         </div><div id="entry">
