--- a/mante.html
+++ b/mante.html
@@ -32,7 +32,7 @@
                     <li><b>kala Asi:</b> 7 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
                 </ul><br>
-                tan mute ante<br>
+                tan mute ante<br><br>
         </details>
         <ul>
             <li>july 27:<b> mu temi phone home take 2 </b><span class="name">The Planet Mercury</span></li><br>
