--- a/mante.html
+++ b/mante.html
@@ -10,14 +10,14 @@
         <title>mante</title><style>
         body{--back: #080808;
         --text: #f0f0f0;
-        --color: #808080;
+        --color: #f6abb6;
         --shadow: #404040;}
+        a{text-decoration-color: #5dcbfc;}
         .name{color: var(--color)}
         .tab:hover{background-color: #14052b; color: #23f3ad}
         </style></head>
     <body><div class="title">
-        <h1>every ma ante server name*</h1>
-        <a href="#">back to top</a>
+        <h1>every ma ante server name*</h1><a href="#">back to top</a>
         <div style="width: auto; background: var(--text); height: 1px; margin-top: 16px"></div></div>
     <div class="main">
         <details><summary><b>notes</b></summary>
@@ -31,7 +31,7 @@
                     <li><b>the motan:</b> 35 changes</li>
                     <li><b>kala Asi:</b> 7 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
-                </ul><br>
+                </ul><br><br>
                 tan mute ante<br><br>
         </details>
         <ul>
