--- a/mante.html
+++ b/mante.html
@@ -27,7 +27,7 @@
                 (name changer) leaderboard:
                 <ul>
                     <li><b>kulupu ko:</b> 44 changes</li>
-                    <li><b>The Planet Mercury:</b> 36 changes</li>
+                    <li><b>The Planet Mercury:</b> 37 changes</li>
                     <li><b>the motan:</b> 35 changes</li>
                     <li><b>kala Asi:</b> 7 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
@@ -35,6 +35,7 @@
                 tan mute ante<br><br>
         </details>
         <ul>
+            <li>july 30:<b> skibbity bop m-dada </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 27:<b> mu temi phone home take 2 </b><span class="name">The Planet Mercury</span></li><br>
             <li>july 27:<b> peanut butter jelly the long way </b><span class="name">the motan</span></li><br>
             <li>july 27:<b> misandry (isn't good) :owe: </b><span class="name">kulupu ko</span></li><br>
