--- a/mante.html
+++ b/mante.html
@@ -26,15 +26,19 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 46 changes</li>
+                    <li><b>kulupu ko:</b> 49 changes</li>
                     <li><b>The Planet Mercury:</b> 38 changes</li>
-                    <li><b>the motan:</b> 36 changes</li>
+                    <li><b>the motan:</b> 37 changes</li>
                     <li><b>kala Asi:</b> 7 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
                 </ul><br>
                 tan mute ante<br><br>
         </details>
         <ul>
+            <li>august 3:<b> gay </b><span class="name">kulupu ko</span></li><br>
+            <li>august 3:<b> gay people paradise </b><span class="name">kulupu ko</span></li><br>
+            <li>august 3:<b> musi Onta, more like musi Onsa :smiling_imp: </b><span class="name">the motan</span></li><br>
+            <li>august 3:<b> sina ken ala utala e musi Onta </b><span class="name">kulupu ko</span></li><br>
             <li>august 2:<b> gu gemi </b><span class="name">kulupu ko</span></li><br>
             <li>august 2:<b> how many aspens </b><span class="name">The Planet Mercury</span></li><br>
             <li>august 1:<b> mante mante pi ijo mante </b><span class="name">kulupu ko</span></li><br>
