--- a/mante.html
+++ b/mante.html
@@ -26,8 +26,8 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 49 changes</li>
-                    <li><b>The Planet Mercury:</b> 38 changes</li>
+                    <li><b>kulupu ko:</b> 51 changes</li>
+                    <li><b>The Planet Mercury:</b> 39 changes</li>
                     <li><b>the motan:</b> 37 changes</li>
                     <li><b>kala Asi:</b> 7 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
@@ -35,6 +35,9 @@
                 tan mute ante<br><br>
         </details>
         <ul>
+            <li>august 4:<b> mabte </b><span class="name">The Planet Mercury</span></li><br>
+            <li>august 4:<b> I HAVE BRAIN </b><span class="name">kulupu ko</span></li><br>
+            <li>august 4:<b> I HAVE BRAIN EATING AMOEBA </b><span class="name">kulupu ko</span></li><br>
             <li>august 3:<b> gay </b><span class="name">kulupu ko</span></li><br>
             <li>august 3:<b> gay people paradise </b><span class="name">kulupu ko</span></li><br>
             <li>august 3:<b> musi Onta, more like musi Onsa :smiling_imp: </b><span class="name">the motan</span></li><br>
