changed background selection color

--- a/mante.html
+++ b/mante.html
@@ -14,6 +14,7 @@
         --shadow: #404040;}
         a{text-decoration-color: #5dcbfc;}
         .name{color: var(--color)}
+        .name::selection{background-color: #5dcbfc}
         .tab:hover{background-color: #14052b; color: #23f3ad}
         </style></head>
     <body><div class="title">
