--- a/mante.html
+++ b/mante.html
@@ -29,13 +29,14 @@
                 <ul>
                     <li><b>kulupu ko:</b> 51 changes</li>
                     <li><b>The Planet Mercury:</b> 39 changes</li>
-                    <li><b>the motan:</b> 37 changes</li>
+                    <li><b>the motan:</b> 38 changes</li>
                     <li><b>kala Asi:</b> 7 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
                 </ul><br>
                 tan mute ante<br><br>
         </details>
         <ul>
+            <li>august 4:<b> fanter </b><span class="name">the motan</span></li><br>
             <li>august 4:<b> mabte </b><span class="name">The Planet Mercury</span></li><br>
             <li>august 4:<b> I HAVE BRAIN </b><span class="name">kulupu ko</span></li><br>
             <li>august 4:<b> I HAVE BRAIN EATING AMOEBA </b><span class="name">kulupu ko</span></li><br>
